# ponkan-python

./: .gitignore  AGENTS.md  LICENSE  NOTICE.md  README.md  pyproject.toml
.agents/skills/agentic-sdd/: SKILL.md
.agents/skills/agentic-self-review/: SKILL.md
.agents/skills/cc3dsfs-source-audit/: SKILL.md
.agents/skills/dev-journal/: SKILL.md
.agents/skills/n3dsxl-hardware-harness/: SKILL.md
.agents/skills/pr-merge-cleanup/: SKILL.md
.agents/skills/pypi-release/: SKILL.md
.agents/skills/spec-format/: SKILL.md
.agents/skills/tcr-lab/: SKILL.md
.agents/skills/tcr-workflow-exp/: SKILL.md
.agents/skills/tdd-one-cycle/: SKILL.md
.agents/skills/tdd-test-list/: SKILL.md
.agents/skills/tdd-workflow/: SKILL.md
.agents/skills/test-desiderata-review/: SKILL.md
.agents/skills/tidy-first/: SKILL.md
.codex/: README.md  hooks.json
.codex/hooks/: pre_tool_use_policy.py  run-pre-tool-use-policy.ps1
.codex/rules/: default.rules
.githooks/: README.md  commit-msg  pre-commit  pre-push
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  hardware_report.md
.github/workflows/: ci.yml  publish.yml
docs/: api.md  publishing.md
scripts/: install-git-hooks.ps1  install-git-hooks.sh
spec/complete/local_001/: AGENT_ENVIRONMENT_BOOTSTRAP.md
spec/complete/local_002/: HOOK_GUARDRAIL_SETUP.md
spec/complete/local_003/: LINT_TYPE_RULE_SETUP.md
spec/complete/local_004/: TDD_SKILL_WORKFLOW_SETUP.md
spec/complete/local_005/: TCR_WORKFLOW_EXP_SETUP.md
spec/complete/local_006/: AGENTIC_SPEC_DRIVEN_DEVELOPMENT.md  AGENT_BOOTSTRAP_PLAYBOOK.md  QUALITY_GATES_AND_REVIEW.md  RESEARCH_NOTES.md
spec/complete/local_007/: GIT_CONTEXT_POLICY.md
spec/complete/local_008/: WORK_UNIT_INDEX.md
spec/complete/local_009/: N3DSXL_DEVICE_IDENTITY_AND_SIZES.md
spec/complete/local_010/: N3DSXL_DEVICE_DISCOVERY_AND_SESSION.md
spec/complete/local_011/: N3DSXL_FTD3_PIPE_AND_CONNECT.md
spec/complete/local_012/: N3DSXL_RAW_CAPTURE_FIXTURE_AND_DECODER.md
spec/complete/local_013/: N3DSXL_ASYNC_STREAMING_ENGINE.md
spec/complete/local_014/: N3DSXL_PERFORMANCE_AND_HARDWARE_GATES.md
spec/complete/local_015/: N3DSXL_UNREADABLE_PRODUCT_STRING_POLICY.md
spec/complete/local_016/: N3DSXL_D3XX_FALLBACK_BACKEND.md
spec/complete/local_017/: CODEX_PRE_TOOL_USE_HOOK_STABILITY.md
spec/complete/local_018/: N3DSXL_LAYOUT_FRAME_SYNC_INVESTIGATION.md
spec/complete/local_019/: N3DSXL_DECODER_API_CLEANUP.md
spec/complete/local_020/: API_DOCSTRING_EXPANSION.md
spec/complete/local_021/: D3XX_STREAMING_LATENCY_MEASUREMENT.md
spec/complete/local_022/: D3XX_NATIVE_FAST_PATH_BACKEND.md
spec/complete/local_023/: HIGH_LEVEL_CAPTURE_READ_API.md
spec/complete/local_024/: PACKAGE_ROOT_RENAME_TO_PONKAN.md
spec/complete/local_025/: PYTHON_SUPPORT_AND_DEPENDENCY_METADATA.md
spec/complete/local_026/: PYPI_RELEASE_OPERATIONS.md
spec/initial/: cc3dsfs_python_n3dsxl_implementation_workflow.md  cc3dsfs_python_rebuild_spec.md
spec/wip/local_005/: TCR_WORKFLOW_EXP_SETUP.md
spec/wip/local_006/: AGENTIC_SPEC_DRIVEN_DEVELOPMENT.md  AGENT_BOOTSTRAP_PLAYBOOK.md  QUALITY_GATES_AND_REVIEW.md
spec/wip/local_008/: WORK_UNIT_INDEX.md
spec/wip/local_009/: N3DSXL_DEVICE_IDENTITY_AND_SIZES.md
spec/wip/local_010/: N3DSXL_DEVICE_DISCOVERY_AND_SESSION.md
spec/wip/local_011/: N3DSXL_FTD3_PIPE_AND_CONNECT.md
spec/wip/local_012/: N3DSXL_RAW_CAPTURE_FIXTURE_AND_DECODER.md
spec/wip/local_013/: N3DSXL_ASYNC_STREAMING_ENGINE.md
spec/wip/local_014/: N3DSXL_PERFORMANCE_AND_HARDWARE_GATES.md
spec/wip/local_015/: N3DSXL_UNREADABLE_PRODUCT_STRING_POLICY.md
spec/wip/local_016/: N3DSXL_D3XX_FALLBACK_BACKEND.md
spec/wip/local_018/: N3DSXL_LAYOUT_FRAME_SYNC_INVESTIGATION.md
spec/wip/local_019/: N3DSXL_DECODER_API_CLEANUP.md
spec/wip/local_022/: D3XX_NATIVE_FAST_PATH_BACKEND.md
spec/wip/local_023/: HIGH_LEVEL_CAPTURE_READ_API.md
spec/wip/local_025/: PYTHON_SUPPORT_AND_DEPENDENCY_METADATA.md
spec/wip/local_026/: PYPI_RELEASE_OPERATIONS.md
src/ponkan/: __init__.py  capture.py  errors.py  hardware_gate.py
src/ponkan/devices/: n3dsxl_ftd3.py
src/ponkan/image/: __init__.py  frame.py
src/ponkan/protocol/: __init__.py  layout_3ds.py  n3dsxl.py
src/ponkan/streaming/: buffers.py  engine.py  policies.py  stats.py
src/ponkan/tools/: __init__.py  capture_raw.py  list_devices.py  raw_to_png.py  stream_n3dsxl.py
src/ponkan/transport/: __init__.py  d3xx_backend.py  d3xx_native.py  d3xx_native_streaming.py  d3xx_streaming.py  ftd3_backend.py  ftd3_pipe.py  libusb_async.py  libusb_backend.py
src/py3dscapture/: __init__.py  artifacts.py  capture.py  errors.py  hardware_gate.py
src/py3dscapture/devices/: __init__.py  n3dsxl_ftd3.py
src/py3dscapture/image/: frame.py
src/py3dscapture/protocol/: layout_3ds.py  n3dsxl.py  sizes.py
src/py3dscapture/streaming/: __init__.py  buffers.py  engine.py  policies.py  stats.py
tests/: conftest.py
tests/e2e/: README.md  test_n3dsxl_connect.py  test_n3dsxl_d3xx_backend.py  test_n3dsxl_d3xx_native_streaming.py  test_n3dsxl_ftd3_pipe.py  test_n3dsxl_high_level_capture_read_api.py  test_n3dsxl_open_close.py  test_n3dsxl_raw_capture.py  test_n3dsxl_streaming.py
tests/manual/: test_n3dsxl_decoder_visual.py
tests/performance/: README.md  test_n3dsxl_d3xx_native_streaming_smoke.py  test_n3dsxl_streaming_smoke.py
tests/unit/: test_codex_pre_tool_use_policy.py  test_d3xx_backend.py  test_d3xx_native_api.py  test_d3xx_native_streaming_backend.py  test_d3xx_streaming_backend.py  test_ftd3_backend_selector.py  test_ftd3_pipe_payloads.py  test_hardware_gate.py  test_high_level_capture_read_api.py  test_layout_3ds_decoder.py  test_libusb_backend.py  test_n3dsxl_artifacts.py  test_n3dsxl_connect_sequence.py  test_n3dsxl_device_filter.py  test_n3dsxl_list_devices_cli.py  test_n3dsxl_session.py  test_n3dsxl_sizes.py  test_package.py  test_raw_capture_metadata.py  test_stream_n3dsxl_cli.py  test_streaming_buffers.py  test_streaming_engine_fake_async.py  test_streaming_performance_stats.py  test_streaming_policies.py
(+25 files in other folders)
