[project]
name = "ponkan-python"
version = "0.1.0"
description = "A Python capture library focused on new 3DS XL capture board frame acquisition."
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = "niart120", email = "38847256+niart120@users.noreply.github.com" }
]
maintainers = [
    { name = "niart120", email = "38847256+niart120@users.noreply.github.com" }
]
requires-python = ">=3.12, <3.14"
license = "MIT"
license-files = ["LICENSE", "NOTICE.md"]
keywords = [
    "3ds",
    "capture-card",
    "n3dsxl",
    "new-3ds-xl",
    "usb",
    "video-capture",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video :: Capture",
    "Typing :: Typed",
]
dependencies = [
    "libusb1>=3.3.1",
    "numpy>=2.0",
]

[project.optional-dependencies]
image = [
    "pillow>=10.0",
]
opencv = [
    "opencv-python>=4.10",
]
d3xx = [
    "pyd3xx>=1.1.4",
]

[project.urls]
Documentation = "https://github.com/niart120/ponkan-python/blob/master/docs/api.md"
Homepage = "https://github.com/niart120/ponkan-python"
Issues = "https://github.com/niart120/ponkan-python/issues"
Repository = "https://github.com/niart120/ponkan-python.git"

[project.scripts]
py3dscapture-capture-raw = "py3dscapture.tools.capture_raw:main"
py3dscapture-list-devices = "py3dscapture.tools.list_devices:main"
py3dscapture-raw-to-png = "py3dscapture.tools.raw_to_png:main"
py3dscapture-stream-n3dsxl = "py3dscapture.tools.stream_n3dsxl:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pyyaml>=6.0.3",
    "ruff>=0.15.16",
    "ty>=0.0.44",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.uv]
cache-dir = ".uv-cache"

[tool.hatch.build.targets.wheel]
packages = ["src/py3dscapture"]

[tool.hatch.build.targets.sdist]
include = [
    "/LICENSE",
    "/NOTICE.md",
    "/README.md",
    "/docs",
    "/pyproject.toml",
    "/src",
    "/tests",
]

[tool.ruff]
line-length = 100
required-version = ">=0.15.16"
src = ["src", "tests"]
target-version = "py312"

[tool.ruff.lint]
ignore = ["D203", "D213"]
select = [
    "A",
    "ANN",
    "ARG",
    "ASYNC",
    "B",
    "BLE",
    "C4",
    "D",
    "DTZ",
    "E",
    "F",
    "FURB",
    "I",
    "N",
    "NPY",
    "PERF",
    "PIE",
    "PLC",
    "PLE",
    "PLW",
    "PT",
    "PTH",
    "RET",
    "RUF",
    "S",
    "SIM",
    "SLOT",
    "T20",
    "TC",
    "TRY",
    "UP",
    "W",
]

[tool.ruff.lint.per-file-ignores]
"src/py3dscapture/tools/**/*.py" = ["T201"]
"tests/**/*.py" = ["D100", "D103", "S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.ruff.lint.isort]
known-first-party = ["py3dscapture"]

[tool.ty.environment]
python-version = "3.12"
root = ["./src"]

[tool.ty.src]
include = ["src", "tests"]

[tool.ty.terminal]
error-on-warning = true
output-format = "concise"

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]
markers = [
    "requires_n3dsxl: requires a connected new 3DS XL capture board",
    "performance: performance smoke tests",
    "manual_visual: requires manual image inspection",
]
